--- a/packages/ai-workspace-common/src/modules/multilingual-search/components/search-results.scss
+++ b/packages/ai-workspace-common/src/modules/multilingual-search/components/search-results.scss
@@ -17,6 +17,7 @@
       padding: 12px;
       border-radius: 8px;
       transition: all 0.3s;
+      border-block-end: none;
     }
 
     .search-results-skeleton-list {
@@ -64,13 +65,12 @@
         .site-title {
           font-size: 14px;
           font-weight: 500;
-          color: rgba(0, 0, 0, 0.8);
+          // color: rgba(0, 0, 0, 0.8);
           margin-bottom: 4px;
         }
 
         .site-url {
           font-size: 12px;
-          color: rgba(0, 0, 0, 0.6);
           text-decoration: none;
 
           &:hover {
